--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -102,20 +102,16 @@
     }
 }
 
-.socialMedia {
-    width: 100%;
-    text-align: center;
-    margin-top: 20px;
-}
-
 .socialMedia ul {
     list-style: none;
 }
 
-.socialMedia ul li {
-    display: inline-block;
-    cursor: pointer;
-    margin: 25px 15px;
+.socialMediaList {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 20px;
 }
 
 .socialMedia img {
