--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -163,3 +163,21 @@
     font-size: 14px;
     line-height: 1.5;
 }
+
+.submitLogInOverLay {
+    margin-top: 310px;
+}
+
+.submitLogIn {
+    padding: 5px 10px;
+    
+        color: #fff;
+    
+        text-transform: uppercase;
+        font-size: 15px;
+    
+        border: 2px solid #fff;
+        border-radius: 30px;
+    
+        cursor: pointer;
+}
