--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -1,15 +1,13 @@
 .modal__container {
     display: flex;
     justify-content: center;
-
-    margin-top: 30px;
+    padding-top: 30px;
 }
 
 .cont {
     position: relative;
     display: flex;
-    // width: 900px;
-
+        background: #fff;
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
