--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -1,14 +1,14 @@
 .formGroup {
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     width: 500px;
 
     display: grid;
-    // grid-template-columns: repeat(1, 1fr);
     gap: 20px;
-    // align-items: center;
-
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    
+    background-color: #fff;
+    // border: 1px solid #ccc;
+    // border-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .thumb {
