--- a/src/components/ContactList/ContactList.module.scss
+++ b/src/components/ContactList/ContactList.module.scss
@@ -2,12 +2,17 @@
     margin-top: 50px;
     list-style: none;
 
+    // background-color: #fff;
+    // border-radius: 5px;
     border-left: 1px solid #ccc;
 }
 
 .item {
+    margin-bottom: 20px;
+    background-color: #fff;
     border-bottom: 1px solid #ccc;
     padding: 20px;
+    border-radius: 5px;
 }
 
 .itemThumb {
