--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -1,6 +1,10 @@
 .title {
-    margin-bottom: 10px;
+    padding: 20px 20px 10px 20px;
 
     font-size: 24px;
     text-transform: uppercase;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+
+    background-color: #fff;
 }
