--- a/src/pages/Contacts/Contacts.module.scss
+++ b/src/pages/Contacts/Contacts.module.scss
@@ -1,8 +1,14 @@
 .contacts {
     display: flex;
-    margin-top: 50px;
+    padding-top: 50px;
 }
 
 .list {
     margin-left: 50px;
+    
+    border-radius: 5px;
+}
+
+.contactForm {
+    border-radius: 5px;
 }
